# vllm-neuron

./: README.md  pyproject.toml  pytest.ini  setup.py
requirements/: core.txt  test.txt
test/: global_metric_store.json  vllm_server_out.txt
test/e2e/offline/: offline_integration_test.py  test_offline_e2e.py
test/e2e/online/: README.md  configs.py  online_server_runner.py  test_online_e2e.py
test/tiny/: test_chunked_prefill_inference.py  test_continuous_batching_inference.py  test_cpu_sampling.py  test_dynamic_sampling.py  test_eagle_speculative_decoding.py  test_prefix_caching_inference.py  test_sequence_parallel.py  test_vanilla_inference_tiny.py
test/unit/: conftest copy.py  conftest.py  test_platform.py
test/unit/core/: test_scheduler.py
test/unit/worker/: test_model_loader.py  test_model_runner copy.py  test_model_runner.py  test_neuron_worker.py
test/utils/: eagle_nxdi_util.py  mm_utils.py
test/utils/fsx_utils/: fsx_hf_mapping.yaml  fsx_utils.py  model_path.py  model_registry.py
test/utils/server/: server.py  start_server.sh
vllm_neuron/: platform.py
vllm_neuron/core/: scheduler.py
vllm_neuron/worker/: neuron_worker.py  neuronx_distributed_model_loader.py  neuronx_distributed_model_runner.py
