[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["test/unit"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["neuronx_vllm_plugin"]
omit = [
    "test/*",
    "ci/*",
    ".github/*",
    "doc/*",
    "*.md",
    "setup.py"
]
